test-cases/negative/test_076_function_without_return_type.lay
# negative test: function with return but no return type
# expected: parser should reject this

define function add that takes x and y
  return x plus y


